--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Intro to javascript</title>
   <script type="text/javascript">
-    alert("Hello World");
+    // alert("Hello World");
   </script>
 </head>
 <body>
-
+  <a href="#" onclick="alert('hehe')">Click here to see something magic!</a>
 </body>
 </html>
